--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="global.css">
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+ Load your custom map initialization script -->
+  <!-- <script src="map.js"></script>
+  <title>Bikewatching</title>
+</head>
+<body>
+  <h1>🚴🏼‍♀️ Bikewatching</h1>
+</body>
+</html> --> 
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,9 +23,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="global.css">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <title>Bikewatching</title>
 </head>
 <body>
   <h1>🚴🏼‍♀️ Bikewatching</h1>
+  <!-- Map Container -->
+  <div id="map"></div>
+  <!-- Load Mapbox GL JS -->
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+  <!-- Load your custom map initialization script -->
+  <script src="map.js"></script>
 </body>
 </html>
