--- a/index.html
+++ b/index.html
@@ -27,12 +27,36 @@
   <title>Bikewatching</title>
 </head>
 <body>
-  <h1>🚴🏼‍♀️ Bikewatching</h1>
+    <header>
+        <h1>🚴🏼‍♀️ Bikewatching</h1>
+        
+        <!-- Time Filter -->
+        <label>
+          Filter by time: 
+          <input type="range" id="time-slider" min="-1" max="1440" value="0">
+          <time id="selected-time"></time>
+          <em id="any-time">(any time)</em>
+        </label>
+      </header>
+
   <!-- Map Container -->
-  <div id="map"></div>
+  <div id="map">
+    <svg id="map-overlay"></svg> <!-- SVG for D3 Overlay -->
+  </div>
+
+  <div class="legend">
+    <div style="--departure-ratio: 1">More departures</div>
+    <div style="--departure-ratio: 0.5">Balanced</div>
+    <div style="--departure-ratio: 0">More arrivals</div>
+  </div>
+</div>
+
+
   <!-- Load Mapbox GL JS -->
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-  <!-- Load your custom map initialization script -->
+  <!-- Load D3.js -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <!-- Load Custom Map Script -->
   <script src="map.js"></script>
 </body>
 </html>
